<resources>
    <string name="app_name">Library</string>
    <string name="name_company">VinhVo.app</string>
    <string name="co_the_thich">Bạn có thể thích</string>
    <string name="moi_nhat">Sách mới nhất</string>
    <string name="search">Nhập tiêu đề hoặc tên tác giả</string>
    <string name="tieng_viet">Tiếng Việt</string>
    <string name="quansu">Quân sự</string>
    <string name="king_doanh">Kinh Doanh</string>
    <string name="ton_giao">Tôn giáo</string>
    <string name="thieu_nhi">Thiếu nhi</string>
    <string name="phat_trien">Phát triển</string>
    <string name="gia_dinh">Gia đình</string>
    <string name="giao_duc">Giáo dục</string>
    <string name="kinhte">Kinh tế</string>
    <string name="lich_su">Lịch sử</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="book_name">Đắc Nhân Tâm</string>
    <string name="author_name">Dale Carnegie</string>
    <string name="category_title">Thể loại</string>
    <string name="areas_of_expertise">Giáo dục</string>
    <string name="introduce">Giới thiệu</string>nh
    <string name="looking_for_more_information">Tìm hiểu thêm</string>
    <string name="author_information">Tìm hiểu thông tin tác giả</string>
    <string name="book_information">Tìm hiểu thêm thông tin sách</string>
    <string name="related_item">Các mục liên quan</string>
    <string name="email_account">vinhvohoang1410@gmail.com</string>
    <string name="borrowed">Đã mượn</string>
    <string name="are_borrowed">Đang mượn</string>
    <string name="expired">Hết hạn</string>
    <string name="application">Ứng dụng</string>
    <string name="connect">Kết nối</string>
    <string name="file">Hồ sơ</string>
    <string name="borrow_and_pay">Mượn trả</string>
    <string name="promissory_note">Phiếu mượn trả</string>
    <string name="product_introduction">Giới thiệu về VinhVo.app</string>
    <string name="contact">Liên hệ báo lỗi hoặc góp ý</string>
    <string name="share">Mời bạn bè sử dụng</string>
    <string name="follow">Theo dõi Page</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="role_admin">Sử dụng quyền Admin</string>
    <string name="library_management">Quản lý thư viện</string>
    <string name="account_management">Quản lý tài khoản</string>
    <string name="publishing_company">Nhà xuất bản</string>
    <string name="publishing_company_name">Tên nhà xuất bản</string>
    <string name="author">Tác giả</string>
    <string name="book">Sách</string>
    <string name="staff">Nhân viên</string>
    <string name="list_staff">Danh sách</string>
    <string name="customer">Khách hàng</string>
    <string name="information">Thông tin</string>
    <string name="address">Địa chỉ</string>
    <string name="phone">Điện thoại</string>
    <string name="fax">Fax</string>
    <string name="website">Website</string>
    <string name="employee_code">Mã nhân viên</string>
    <string name="email">Email</string>
    <string name="save">Lưu</string>
    <string name="nation">Quốc gia</string>
    <string name="publish">Nhà xuất bản</string>
    <string name="publicationDate">Ngày xuất bản</string>
    <string name="numberOfPages">Số trang</string>
    <string name="bookCode">Mã sách</string>
    <string name="done">Xong</string>
    <string name="book_title">Tên sách</string>
    <string name="author_title">Tên tác giả</string>
    <string name="language_title">Ngôn ngữ</string>
    <string name="birth_day">Ngày sinh</string>
    <string name="famous_works">Tác phẩm nổi bật</string>
    <string name="sex">Giới tính</string>
    <string name="position">Chức vụ</string>
    <string name="name_title">Họ và tên</string>
    <string name="customers_code">Mã khách hàng</string>
    <string name="citizen_card_code">CMND</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="admin">Admin</string>
    <string name="take_a_photo">Chụp ảnh</string>
    <string name="photos">Thư viện ảnh</string>
    <string name="pseudonym">Bút danh</string>
   <string name="author_code">Mã tác giả</string>
    <string name="artwork">Tác phẩm</string>
    <string name="noData">No Data</string>
    <string name="seeMore">Xem thêm</string>


</resources>