<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/nation"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNationInfo"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/publish"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/publicationDate"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/txtPublishInfo"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/txtNationInfo" />

    <TextView
        android:id="@+id/txtPublicationDateInfo"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/txtPublishInfo" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/numberOfPages"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/txtNumberOfPagesInfo"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/txtPublicationDateInfo" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/bookCode"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/txtBookCodeInfo"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/txtNumberOfPagesInfo" />

    <Button
        android:id="@+id/btnDimissDialogInfo"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_save"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBookCodeInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>